# provion

./: .gitignore  ARCHITECTURE.md  Architecture.md  CONTRIBUTING.md  Current State of the Repository.md  PROVION_DEPLOYMENT_GUIDE.md  README.md  TECHNICAL_SPEC.md  Terms & Conditions.md  WHITEPAPER.md
.github/workflows/: test.yml
contracts/: Cargo.toml  rust-toolchain.toml
contracts/.cargo/: config.toml
contracts/src/: lib.rs
integration-tests/: hardhat.config.js  package.json
integration-tests/contracts/: MockUSDC.sol
integration-tests/scripts/: test-flow.js
prover/: Cargo.toml
prover/host/: Cargo.toml
prover/host/src/: main.rs
prover/methods/: Cargo.toml
prover/methods/guest/: Cargo.toml
prover/methods/guest/src/: main.rs
ui/: index.html
